repeated extrusion is buggy #60069

Closed
opened 2019-01-02 14:55:18 +01:00 by heini · 15 comments

Operating system: Win 10 64bit
Graphics card: Geforce 940M

Broken:
2.80, 4dd0a90f42 win64, blender2.8, 2018-12-16

Short description of error
extruding a face and then redoing the action with shift+r gives unwanted result when extrusion axis isn't locked

Exact steps for others to reproduce the error
select default cube, go to edit mode select face, press e to extrude and z,z to free axis
repeating the action with shift r will move the new faces in a weird way
Clipboard02.jpg

Operating system: Win 10 64bit Graphics card: Geforce 940M Broken: 2.80, 4dd0a90f4213 win64, blender2.8, 2018-12-16 **Short description of error** extruding a face and then redoing the action with shift+r gives unwanted result when extrusion axis isn't locked **Exact steps for others to reproduce the error** select default cube, go to edit mode select face, press e to extrude and z,z to free axis repeating the action with shift r will move the new faces in a weird way ![Clipboard02.jpg](https://archive.blender.org/developer/F6150855/Clipboard02.jpg)
Author

Added subscriber: @heini

Added subscriber: @heini

#74090 was marked as duplicate of this issue

#74090 was marked as duplicate of this issue

#74031 was marked as duplicate of this issue

#74031 was marked as duplicate of this issue

#62677 was marked as duplicate of this issue

#62677 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB

This seems to be cause the operator does not properly keep track of the locked axis. You can seen that the Z axis is still ticked. If you untick it and then hit shift+r, it works.

This seems to be cause the operator does not properly keep track of the locked axis. You can seen that the Z axis is still ticked. If you untick it and then hit shift+r, it works.
Campbell Barton was assigned by Sebastian Parborg 2019-01-02 18:03:32 +01:00
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:35:30 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm that this is still a bug.
The first time you press {key shift R}, the extrude appears to change direction:
image.png
(In this image I repeated the operation 4 times).

I can confirm that this is still a bug. The first time you press {key shift R}, the extrude appears to change direction: ![image.png](https://archive.blender.org/developer/F8289678/image.png) (In this image I repeated the operation 4 times).

Added subscribers: @rs2128, @WilliamReynish

Added subscribers: @rs2128, @WilliamReynish

Added subscribers: @SpectreFirst, @RL, @basile.rouault

Added subscribers: @SpectreFirst, @RL, @basile.rouault
Germano Cavalcante self-assigned this 2020-02-21 16:00:32 +01:00
Germano Cavalcante removed their assignment 2020-02-21 19:22:35 +01:00
Campbell Barton was assigned by Germano Cavalcante 2020-02-21 19:22:35 +01:00

Removed subscriber: @basile.rouault

Removed subscriber: @basile.rouault

Added subscriber: @mushroomeo

Added subscriber: @mushroomeo

This issue was referenced by 7c4391e6aa

This issue was referenced by 7c4391e6aa88e18231302e733481b26afa0072bd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60069
No description provided.