Fix T60069: repeated extrusion uses wrong axis